# tcptool

./: Cargo.toml
servertest/: Cargo.toml
servertest/src/: main.rs
tcpclient/: Cargo.toml
tcpclient/src/: app.rs  main.rs  message.rs  utils.rs
tcpclient/src/network/: connection.rs  mod.rs  receiver.rs  scanner.rs
tcpclient/src/ui/: mod.rs  panels.rs  styles.rs
tcpserver/: Cargo.toml
tcpserver/src/: main.rs
