[package]
name = "tcpclient"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
egui = "0.31"
eframe = { version = "0.31"}
env_logger = "0.11"
chrono = "0.4"
futures = "0.3"
num_cpus = "1.16"